# syntiq_mt5

./: .gitignore  AGENTS.md  CHANGELOG.md  DOCS_PHASE_2_SUMMARY.md  DOCS_UPGRADE_SUMMARY.md  DOCUMENTATION_TRANSFORMATION_COMPLETE.md  DX_FIXES_SUMMARY.md  FINAL_TRANSFORMATION_SUMMARY.md  FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  RELEASE_CHECKLIST.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-docs.yml
docs/: api_reference.md  connection_design.md  getting-started.md  index.md
docs/api/: account.md  client.md  connection.md  core.md  history.md  index.md  market-book.md  market.md  orders.md  positions.md  symbols.md  terminal.md  ticks.md
docs/assets/: custom.css
docs/core/: error-handling.md  index.md  lifecycle.md  results.md
docs/guides/: client-vs-functions.md  connection.md  positions.md  results.md  symbols.md
docs/reference/: constants.md  index.md
docs/tasks/: get-account-info.md  get-candles.md  get-history.md  get-positions.md  get-symbols.md  get-ticks.md  handle-errors.md  index.md  market-book.md  place-orders.md
examples/: candles.py  error_handling.py  full_api_demo.py  quickstart.py
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api/: index.html
site/api_reference/: index.html
site/assets/: custom.css
site/connection_design/: index.html
site/getting-started/: index.html
site/search/: search_index.json
src/metatrader5_wrapper/: __init__.py  _convert.py  _logging.py  client.py  (+1 more)
tests/: test_client_facade.py  test_connection.py  test_convert.py  test_enums.py  test_history_services.py  test_info_services.py  test_market_book_services.py  test_new_wrapper.py  test_order_services.py  test_positions.py  test_public_api.py  test_rates_services.py  test_result_and_client.py  test_sequences_and_contract.py  test_symbols.py
(+75 files in other folders)
