[project]
name = "metatrader5-wrapper"
version = "0.1.0"
description = "A structured wrapper around MetaTrader5 Python API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "metatrader5>=5.0.5735",
    "pydantic>=2.13.3",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1,<2",
    "mkdocs-gen-files>=0.6.1",
    "mkdocs-literate-nav>=0.6.3",
    "mkdocs-material>=9.7.6,<10",
    "mkdocs-section-index>=0.3.12",
    "mkdocstrings[python]>=1.0.4",
    "mypy>=1.20.1",
    "pytest>=9.0.1",
    "ruff>=0.15.11",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
