[project]
name = "syntiq-mt5"
version = "0.1.0"
description = "Minimal, typed and reliable SDK wrapper for the MetaTrader5 Python API."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Lucifer516-sudoer" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]
dependencies = [
  "metatrader5>=5.0.5735; sys_platform == 'win32'",
  "pydantic>=2.13.3",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.20.1",
  "pytest>=9.0.1",
  "ruff>=0.15.11",
  "mkdocs>=1.6.1,<2",
  "mkdocs-material>=9.7.6,<10",
  "mkdocstrings[python]>=1.0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/syntiq_mt5"]

[tool.hatch.build.targets.sdist]
include = ["src/syntiq_mt5", "README.md", "LICENSE", "CHANGELOG.md", "pyproject.toml"]
